# Japanese

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile.in
include/japanese/games/: learnsyllabary.hpp
include/japanese/hiragana/: diphthongs.hpp  hiragana.hpp  hiraganagame.hpp  impuresounds.hpp  puresounds.hpp
include/japanese/katakana/: diphthongs.hpp  impuresounds.hpp  katakana.hpp  puresounds.hpp  specialcharacters.hpp
src/: CMakeLists.txt
src/japanese/: CMakeLists.txt
src/japanese/hiragana/: CMakeLists.txt  diphthongs.cpp  hiragana.cpp  hiraganagame.cpp  impuresounds.cpp  puresounds.cpp
src/japanese/katakana/: CMakeLists.txt  diphthongs.cpp  impuresounds.cpp  katakana.cpp  puresounds.cpp  specialcharacters.cpp
test/: CMakeLists.txt
test/japanese/: CMakeLists.txt
test/japanese/hiragana/: CMakeLists.txt  main.cpp
test/japanese/learnsyllabary/: CMakeLists.txt  learnsyllabary.cpp  main.cpp
